# Cisco-Meraki-Agentic-Workflow-MCP-Server

./: ARCHITECTURE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WORKFLOWS.md  agentic_demo.py  claude_desktop_config.json  cline_mcp_settings.json  install.sh  pyproject.toml  server.py  test_server.py  test_workflows.py
